updating logoori and javanese

--- a/basic-format/ref.bib
+++ b/basic-format/ref.bib
@@ -211,4 +211,16 @@ title = {A grammar of Tundra Nenets},
 }
 
 
+@article{Logoori,
+author = {John Gluckman and Margit Bowler},
+doi = {doi:10.1515/jall-2020-2010},
+url = {https://doi.org/10.1515/jall-2020-2010},
+title = {The expression of modality in Logoori},
+journal = {Journal of African Languages and Linguistics},
+number = {2},
+volume = {41},
+year = {2020},
+pages = {195--238}
+}
+
 
