update metadata, sources, etc

--- a/basic-format/sources.bib
+++ b/basic-format/sources.bib
@@ -143,7 +143,7 @@ year = {2005},
 title = {A grammar of Hup},
 }
 
-@book{NæssÅshild2011AgoV,
+@book{Ashild2011AgoV,
 address = {Berlin ; New York},
 author = {Næss, Åshild},
 keywords = {Pileni language},
