updating sources.bib

--- a/basic-format/sources.bib
+++ b/basic-format/sources.bib
@@ -1,5 +1,5 @@
 
-@book{MatrasYaron2012AGoD,
+@book{Matras-2012-Domari,
 language = {eng},
 address = {Berlin/Boston},
 author = {Matras, Yaron},
@@ -14,7 +14,7 @@ title = {A Grammar of Domari},
 edition = {1. Aufl.},
 }
 
-@article{Gitksan,
+@article{Matthewson-2013-Gitksan,
  ISSN = {00207071, 15457001},
  URL = {http://www.jstor.org/stable/10.1086/670751},
  abstract = {This paper provides a description of the modal system of Gitksan (Tsimshianic) and places the Gitksan system within an emerging formal typology of modality. I show that Gitksan encodes distinctions both of modal strength and of modality type. It has one strong circumstantial modal (sgi) and two weak circumstantial modals (da’aḴhlxw and anooḴ), the second of which is specialized for deontic possibility (permission). Within the epistemic domain, modal strength is not distinguished (Peterson 2010). I further argue that Gitksan modals are not inherently future-oriented but instead obtain their future orientation from the overt future marker dim, which appears optionally with epistemic modals and obligatorily with circumstantial ones.[Keywords: modality, tense, aspect, Tsimshianic]},
@@ -28,7 +28,7 @@ edition = {1. Aufl.},
  year = {2013}
 }
 
-@book{HellwigBirgit2011AgoG,
+@book{Hellwig-2011-Goemai,
 address = {Berlin ; Boston},
 author = {Hellwig, Birgit},
 keywords = {Goemai language -- Grammar},
@@ -40,7 +40,7 @@ year = {2011},
 title = {A grammar of Goemai},
 }
 
-@book{ForkerDiana2013AgoH,
+@book{Forker-2013-Hinuq,
 address = {Berlin ; Boston},
 author = {Forker, Diana},
 keywords = {Ginukh language -- Grammar},
@@ -52,7 +52,7 @@ year = {2013},
 title = {A grammar of Hinuq},
 }
 
-@article{Javanese,
+@article{VanderKlok-2013-Javanese,
  ISSN = {00298115, 15279421},
  URL = {http://www.jstor.org/stable/43286355},
  abstract = {This paper provides a first complete description of pure possibility and pure necessity modals in the Paciran dialect of Javanese, based on a wide variety of fieldwork tools such as elicitation, storyboards (www.storyboards.org), interviews, and a questionnaire on modality that I designed. To best understand their semantics, I present a theoretically informed approach to describing modality, focusing on both modal force and modal flavor. I then present a formal semantic analysis of these modals in Paciran Javanese within the standard Kratzerian theory, explicitly showing how modals with fixed flavor and fixed force can be captured.},
@@ -66,7 +66,7 @@ title = {A grammar of Hinuq},
  year = {2013}
 }
 
-@book{ChildsGeorgeTucker2011AgoM,
+@book{Childs-2011-Mani,
 address = {Berlin ; Boston},
 author = {Childs, George Tucker},
 keywords = {Bullom So language -- Grammar},
@@ -78,7 +78,7 @@ year = {2011},
 title = {A grammar of Mani},
 }
 
-@book{FeddenSebastian2011AgoM,
+@book{Fedden-2011-Mian,
 address = {Berlin},
 author = {Fedden, Sebastian},
 keywords = {Mian language -- Grammar},
@@ -92,7 +92,7 @@ title = {A grammar of Mian},
 
 
 
-@book{GernerMatthias2013AGoN,
+@book{Gerner-etal-2013-Nuosu,
 language = {eng},
 address = {Berlin/Boston},
 author = {Gerner, Matthias and Bossong, Georg and Dryer, Matthew},
@@ -106,7 +106,7 @@ year = {2013},
 title = {A Grammar of Nuosu},
 }
 
-@book{LaPollaRandyJ2003AGoQ,
+@book{LaPolla-etal-2003-Qiang,
 language = {eng},
 address = {Berlin/Boston},
 author = {LaPolla, Randy J and Huang, Chenglong},
@@ -122,7 +122,7 @@ title = {A Grammar of Qiang: With annotated texts and glossary},
 edition = {1. Aufl.},
 }
 
-@article{Cable2017TheEO,
+@article{Cable-2017-Tlingit,
   title={The Expression of Modality in Tlingit: A Paucity of Grammatical Devices1},
   author={Seth Cable},
   journal={International Journal of American Linguistics},
@@ -131,7 +131,7 @@ edition = {1. Aufl.},
   pages={619 - 678}
 }
 
-@misc{EppsPatience2005AgoH,
+@misc{Epps-2005-Hup,
 copyright = {Database copyright ProQuest LLC; ProQuest does not claim copyright in the individual underlying works.},
 language = {eng},
 author = {Epps, Patience},
@@ -143,7 +143,7 @@ year = {2005},
 title = {A grammar of Hup},
 }
 
-@book{Ashild2011AgoV,
+@book{Næss-2011-Vaeakau-Taumako,
 address = {Berlin ; New York},
 author = {Næss, Åshild},
 keywords = {Pileni language},
@@ -155,7 +155,7 @@ year = {2011},
 title = {A grammar of Vaeakau-Taumako},
 }
 
-@book{MillerAmy2001AgoJ,
+@book{Miller-2001-Jamul-Tiipay,
 language = {eng},
 author = {Miller, Amy},
 keywords = {Kumiai language},
@@ -168,7 +168,7 @@ year = {2001},
 title = {A grammar of Jamul Tiipay: Amy Miller},
 }
 
-@book{VoortHeinvander2004AGoK,
+@book{Voort-2004-Kwaza,
 language = {eng},
 address = {Berlin/Boston},
 author = {Voort, Hein van der},
@@ -183,7 +183,7 @@ title = {A Grammar of Kwaza},
 edition = {1. Aufl.},
 }
 
-@book{NikolaevaIrina2014AgoT,
+@book{Nikolaeva-2014-Tundra-Nenets,
 address = {Berlin, [Germany] ; Boston, [Massachusetts]},
 author = {Nikolaeva, Irina},
 keywords = {Nenets language -- Grammar},
@@ -196,7 +196,7 @@ title = {A grammar of Tundra Nenets},
 }
 
 
-@article{St'át'imcets,
+@article{Rullmann-etal-2008-St'át'imcets,
  ISSN = {0925854X, 1572865X},
  URL = {http://www.jstor.org/stable/23748121},
  abstract = {Modals in St'át'imcets (Lillooet Salish) show two differences from their counterparts in English. First, they have variable quantificational force, systematically allowing both possibility and necessity interpretations; and second, they lexically restrict the conversational background, distinguishing for example between deontic and (several kinds of) epistemic modality. We provide an analysis of the St'át'imcets modals according to which they are akin to specific indefinites in the nominal domain. They introduce choice function variables which select a subset of the accessible worlds. Following Klinedinst, we assume distributivity over the resulting set of worlds. St'át'imcets modals thus receive a uniform interpretation as (distributive) pluralities. The appearance of variability in modal force arises because the choice function can select a larger or smaller subset of accessible worlds. Finally, we discuss the implications of our analysis for the investigation of modal systems in other languages.},
@@ -211,7 +211,7 @@ title = {A grammar of Tundra Nenets},
 }
 
 
-@article{Logoori,
+@article{Gluckman-etal-2020-Logoori,
 author = {John Gluckman and Margit Bowler},
 doi = {doi:10.1515/jall-2020-2010},
 url = {https://doi.org/10.1515/jall-2020-2010},
