--- a/basic-format/sources.bib
+++ b/basic-format/sources.bib
@@ -196,7 +196,7 @@ title = {A grammar of Tundra Nenets},
 }
 
 
-@article{Rullmann-etal-2008-St'át'imcets,
+@article{Rullmann-etal-2008-Lillooet-Salish,
  ISSN = {0925854X, 1572865X},
  URL = {http://www.jstor.org/stable/23748121},
  abstract = {Modals in St'át'imcets (Lillooet Salish) show two differences from their counterparts in English. First, they have variable quantificational force, systematically allowing both possibility and necessity interpretations; and second, they lexically restrict the conversational background, distinguishing for example between deontic and (several kinds of) epistemic modality. We provide an analysis of the St'át'imcets modals according to which they are akin to specific indefinites in the nominal domain. They introduce choice function variables which select a subset of the accessible worlds. Following Klinedinst, we assume distributivity over the resulting set of worlds. St'át'imcets modals thus receive a uniform interpretation as (distributive) pluralities. The appearance of variability in modal force arises because the choice function can select a larger or smaller subset of accessible worlds. Finally, we discuss the implications of our analysis for the investigation of modal systems in other languages.},
