small update to sources

--- a/basic-format/sources.bib
+++ b/basic-format/sources.bib
@@ -56,7 +56,7 @@ title = {A grammar of Hinuq},
  ISSN = {00298115, 15279421},
  URL = {http://www.jstor.org/stable/43286355},
  abstract = {This paper provides a first complete description of pure possibility and pure necessity modals in the Paciran dialect of Javanese, based on a wide variety of fieldwork tools such as elicitation, storyboards (www.storyboards.org), interviews, and a questionnaire on modality that I designed. To best understand their semantics, I present a theoretically informed approach to describing modality, focusing on both modal force and modal flavor. I then present a formal semantic analysis of these modals in Paciran Javanese within the standard Kratzerian theory, explicitly showing how modals with fixed flavor and fixed force can be captured.},
- author = {Jozina Vander Klok},
+ author = {Vander Klok, Jozina},
  journal = {Oceanic Linguistics},
  number = {2},
  pages = {341--374},
