updating Tlingit to the new format

--- a/basic-format/sources.bib
+++ b/basic-format/sources.bib
@@ -223,4 +223,10 @@ year = {2020},
 pages = {195--238}
 }
 
+@misc{Uegaki-Hannon-2022,
+author={Wataru Uegaki and Ella Hannon},
+title={Cross-linguistic dataset of force-flavour combinations in modal elements},
+year={2022}
+}
+
 
